--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ round-avatar: true
 
 # If you want to have an image logo in the top-left corner instead of having the title of the website,
 # then specify the following parameter
-#title-img: /path/to/image
+title-img: https://duckdb.org/images/logo-dl/DuckDB_Logo-horizontal.svg
 
 
 #####################################
